syntax = "proto3";

option java_package = "com.nxg.im.core";
option java_multiple_files = true;

message IMCoreMessage {
  // 版本
  uint32 version = 1;
  // 命令
  string cmd = 2;
  // 子命令
  string sub_cmd = 3;
  // 消息类型，0:request，1:acknowledge，2:notify
  uint32 type = 4;
  // 消息log_id
  uint64 log_id = 5;
  // 消息序列
  uint64 seq_id = 6;
  // 消息体长度
  uint32 body_len = 7;
  // 消息体，根据cmd，sub_cmd，type来确定
  bytes body_data = 8;
}